src/styles/global.css
@import "tailwindcss";

@font-face {
  font-family: "GeistMono";
  src: url("/fonts/GeistMono[wght].woff2") format("woff2");
  font-weight: 400 500;
  font-style: normal;
  font-display: swap;
}

@variant dark (@media (prefers-color-scheme: dark));

@theme {
  --font-*: initial;
  --font-mono:
    "GeistMono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    "Liberation Mono", "Courier New", monospace;
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-separator: var(--separator);
  --color-underline: var(--underline);
  --color-highlight: var(--highlight);
  --color-pre-background: var(--pre-background);
}

:root {
  --background: var(--color-white);
  --foreground: var(--color-neutral-950);
  --muted: var(--color-neutral-200);
  --muted-foreground: var(--color-neutral-500);
  --separator: var(--color-neutral-200);
  --pre-background: var(--color-white);
}

@media (prefers-color-scheme: dark) {
  :root {
    color-scheme: dark;
    --background: var(--color-neutral-950);
    --foreground: var(--color-neutral-50);
    --muted: var(--color-neutral-700);
    --muted-foreground: var(--color-neutral-400);
    --separator: var(--color-neutral-800);
    --pre-background: var(--color-neutral-950);
  }

  .astro-code,
  .astro-code span {
    color: var(--shiki-dark) !important;
  }
}

@layer base {
  html {
    height: 100%;
    background-color: var(--color-background);
  }

  body {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    display: flex;
    flex-direction: column;
    min-height: 100%;
    background-color: var(--color-background);
    color: var(--color-foreground);
  }

  mark,
  :not(pre) > code {
    background-color: var(--color-muted);
    color: inherit;
    padding-inline: var(--spacing);
    box-decoration-break: clone;
    border-radius: var(--radius-sm);
  }

  pre {
    --pre-background-color: var(--color-pre-background);
    padding-block: calc(var(--spacing) * 4);
    font-size: var(--text-xs);
    line-height: 1.5;
    background-color: var(--pre-background-color) !important;
    border-radius: var(--radius-md);
    border: 1px solid var(--color-separator);
    scrollbar-width: thin;
    scrollbar-color: var(--color-separator) transparent;
    outline-offset: 4px;
  }

  pre code {
    isolation: isolate;
    display: block;
    width: fit-content;
    min-width: 100%;
    counter-reset: line;

    & .line {
      --line-background-color: var(--pre-background-color);
      --line-border-color: var(--line-background-color);
      display: inline-block;
      width: 100%;
      counter-increment: line;
      background-color: var(--line-background-color);

      @media (hover: hover) {
        &:hover {
          --line-background-color: light-dark(
            var(--color-neutral-100),
            var(--color-neutral-900)
          );
        }
      }

      &::before {
        pointer-events: none;
        position: sticky;
        left: 0;
        z-index: 20;
        display: inline-block;
        width: 2.75rem;
        background: linear-gradient(
          to right,
          var(--line-background-color) 80%,
          transparent
        );
        padding-right: 1rem;
        text-align: right;
        color: var(--color-muted-foreground);
        content: counter(line);
        user-select: none;
        border-left: 2px solid var(--line-border-color);
      }

      &::after {
        pointer-events: none;
        position: sticky;
        right: 0;
        z-index: 10;
        display: inline-block;
        width: 1.5rem;
        background: linear-gradient(
          to left,
          var(--line-background-color) 35%,
          transparent
        );
        content: " ";
        user-select: none;
      }

      &.highlighted,
      &.remove,
      &.add {
        --line-background-color: color-mix(
          in oklab,
          var(--line-border-color),
          var(--pre-background-color) 90%
        );

        @media (hover: hover) {
          &:hover {
            --line-background-color: color-mix(
              in oklab,
              var(--line-border-color),
              var(--pre-background-color) 80%
            );
          }
        }

        &::before {
          color: var(--line-border-color);
        }
      }

      &.highlighted {
        --line-border-color: #08c0ef;
      }

      &.remove {
        --line-border-color: #ff6762;
        &::before {
          content: "-";
        }
      }

      &.add {
        --line-border-color: #5ecc71;
        &::before {
          content: "+";
        }
      }
    }
  }

  pre[data-language="bash"] {
    .line::before {
      content: "$";
    }
  }
}

@layer components {
  .prose {
    color: var(--color-muted-foreground);

    & > :where(* + *) {
      margin-top: calc(var(--spacing) * 5);
    }

    & :where(a) {
      color: var(--color-foreground);
      text-decoration: underline;
      text-decoration-color: var(--color-muted-foreground);
    }

    & :where(blockquote) {
      display: flex;
      column-gap: var(--spacing);
      &::before {
        content: "\BB";
      }
    }

    & :where(:is(h1, h2, h3)) {
      color: var(--color-foreground);
    }

    & :where(ul) {
      display: flex;
      flex-direction: column;
      row-gap: var(--spacing);
    }

    & :where(li) {
      display: flex;
      column-gap: var(--spacing);
      &::before {
        content: "\203A";
      }
    }
  }
}

@layer utilities {
  .bg-grid {
    background: conic-gradient(
      from 90deg at 50% 50%,
      transparent 0deg 90deg,
      var(--color-separator) 90deg 180deg,
      transparent 180deg 270deg,
      var(--color-separator) 270deg 360deg
    );
    background-size: 8px 8px;
  }
}

